...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="@dimen/card_img_regular_size"
            android:layout_height="@dimen/card_img_regular_size"
            android:layout_margin="@dimen/common_padding_min"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/description_img_photo"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:buttonTint="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_min"
            android:button="@drawable/ic_delete"
            android:buttonTint="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
...
